--- a/Finance.WEB/app/views/root.html
+++ b/Finance.WEB/app/views/root.html
@@ -52,7 +52,7 @@
                                         <tr ng-repeat="value in totalValues.debit" class="repeat-item">
                                             <td>{{$index+1}}</td>
                                             <td>{{value.departmentName}}</td>
-                                            <td ng-repeat="title in titleDebit">{{ value[(title.title+'_'+title.description).toLowerCase()]}}</td>
+                                            <td ng-repeat="title in titleDebit">{{ value[(title.title+'_'+title.description).toLowerCase()] | number:2}}</td>
                                             <td>{{rightTotal('debit',value.departmentName,dateId)}}</td>
                                         </tr>
                                         <tr><td colspan="2">Cəmi</td>
@@ -78,7 +78,7 @@
                                         <tr ng-repeat="value in totalValues.kredit" class="repeat-item">
                                             <td>{{$index+1}}</td>
                                             <td>{{value.departmentName}}</td>
-                                            <td ng-repeat="title in titleKredits">{{ value[(title.title+'_'+title.description).toLowerCase()] }}</td>
+                                            <td ng-repeat="title in titleKredits">{{value[(title.title+'_'+title.description).toLowerCase()] | number:2}}</td>
                                             <td>{{rightTotal('kredit',value.departmentName,dateId)}}</td>
                                         </tr>
                                         <tr>
