--- a/Finance.WEB/app/views/values.html
+++ b/Finance.WEB/app/views/values.html
@@ -69,7 +69,7 @@
                                                         <div flex="1"></div>
                                                         <div flex="20">
                                                             <md-input-container>
-                                                                <input class="form-control" required ng-model="newCtrl.debit.value" type="number" step="0.01" min="0" max="99999" />
+                                                                <input class="form-control" required ng-model="newCtrl.debit.value" type="number" step="0.01" min="0" max="9999999" />
                                                             </md-input-container>
                                                         </div>
                                                         <div flex="1"></div>
@@ -125,7 +125,7 @@
                                                         <div flex="1"></div>
                                                         <div flex="20">
                                                             <md-input-container>
-                                                                <input class="form-control" required ng-model="newCtrl.debit.value" type="number" step="0.01" min="0" max="99999" />
+                                                                <input class="form-control" required ng-model="newCtrl.debit.value" type="number" step="0.01" min="0" max="9999999" />
                                                             </md-input-container>
                                                         </div>
                                                         <div flex="1"></div>
