--- a/Finance.WEB/app/views/root.html
+++ b/Finance.WEB/app/views/root.html
@@ -52,11 +52,11 @@
                                         <tr ng-repeat="value in totalValues.debit" class="repeat-item">
                                             <td>{{$index+1}}</td>
                                             <td>{{value.departmentName}}</td>
-                                            <td ng-repeat="title in titleDebit">{{ value[(title.title+'_'+title.description).toLowerCase()] | number:2}}</td>
+                                            <td ng-repeat="title in titleDebit">{{ value[combineTitle(title.title,title.description)] | number:2}}</td>
                                             <td>{{rightTotal('debit',value.departmentName,dateId)}}</td>
                                         </tr>
                                         <tr><td colspan="2">Cəmi</td>
-                                        <td ng-repeat="title in titleDebit"><b>{{totalRow('debit',(title.title+'_'+title.description).toLowerCase(),dateId) | number:2}}</b></td>                                        
+                                        <td ng-repeat="title in titleDebit"><b>{{totalRow('debit',combineTitle(title.title,title.description),dateId) | number:2}}</b></td>                                        
                                         <td></td>
                                        </tr>
                                     </tbody>
@@ -78,12 +78,12 @@
                                         <tr ng-repeat="value in totalValues.kredit" class="repeat-item">
                                             <td>{{$index+1}}</td>
                                             <td>{{value.departmentName}}</td>
-                                            <td ng-repeat="title in titleKredits">{{value[(title.title+'_'+title.description).toLowerCase()] | number:2}}</td>
+                                            <td ng-repeat="title in titleKredits">{{value[combineTitle(title.title,title.description)] | number:2}}</td>
                                             <td>{{rightTotal('kredit',value.departmentName,dateId)}}</td>
                                         </tr>
                                         <tr>
                                             <td colspan="2">Cəmi</td>
-                                            <td ng-repeat="title in titleKredits"><b>{{totalRow('kredit',(title.title+'_'+title.description).toLowerCase(),dateId) | number:2}}</b></td>
+                                            <td ng-repeat="title in titleKredits"><b>{{totalRow('kredit',combineTitle(title.title,title.description),dateId) | number:2}}</b></td>
                                             <td></td>
                                         </tr>
                                     </tbody>
